--- a/index.html
+++ b/index.html
@@ -354,6 +354,9 @@
             <li>
               <a href="videos.html" class="footer_last_part_menu">Videos</a>
             </li>
+            <li>
+              <a href="sponsors.html" class="footer_last_part_menu">Sponsors</a>
+            </li>
           </ul>
         </div>
         <div class="col-12 col-md-2">
