--- a/sponsors.html
+++ b/sponsors.html
@@ -27,6 +27,53 @@
 </head>
 
 <body class="single">
+  <!-- <div class="container-fluid">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-md-3 fh5co_padding_menu">
+          <img src="images/wsoe-logo.png" alt="img" class="fh5co_logo_width" />
+        </div>
+        <div class="col-12 col-md-9 align-self-center fh5co_mediya_right">
+          <div class="text-center d-inline-block">
+            <a class="fh5co_display_table">
+              <div class="fh5co_verticle_middle">
+                <i class="fa fa-search"></i>
+              </div>
+            </a>
+          </div>
+          <div class="text-center d-inline-block">
+            <a class="fh5co_display_table">
+              <div class="fh5co_verticle_middle">
+                <i class="fa fa-linkedin"></i>
+              </div>
+            </a>
+          </div>
+          <div class="text-center d-inline-block">
+            <a class="fh5co_display_table">
+              <div class="fh5co_verticle_middle">
+                <i class="fa fa-google-plus"></i>
+              </div>
+            </a>
+          </div>
+          <div class="text-center d-inline-block">
+            <a href="https://twitter.com/fh5co" target="_blank" class="fh5co_display_table">
+              <div class="fh5co_verticle_middle">
+                <i class="fa fa-twitter"></i>
+              </div>
+            </a>
+          </div>
+          <div class="text-center d-inline-block">
+            <a href="https://fb.com/fh5co" target="_blank" class="fh5co_display_table">
+              <div class="fh5co_verticle_middle">
+                <i class="fa fa-facebook"></i>
+              </div>
+            </a>
+          </div>
+          <div class="clearfix"></div>
+        </div>
+      </div>
+    </div>
+  </div> -->
   <div class="container-fluid fh5co_padd_mediya padding_786">
     <div class="container padding_786">
       <nav class="navbar navbar-toggleable-md navbar-light ">
@@ -84,70 +131,56 @@
     <div class="container">
       <div class="row">
         <a href="#" class="fh5co_con_123">
-          <i class="fa fa-home"></i>
+          <i class="fa fa-trophy"></i>
         </a>
-        <a href="#" class="fh5co_con pt-2"> About Us </a>
+        <a href="#" class="fh5co_con pt-2"> Sponsors </a>
       </div>
     </div>
   </div>
-  <div class="container-fluid">
-    <div class="container" style="padding: 60px">
-      <h1>Our Team</h1>
-      <div class="row">
-        <div class="col-md-6">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et tincidunt erat. Nunc ac dolor imperdiet lectus
-            pulvinar posuere. Nunc vehicula eleifend egestas. Vivamus in lorem in dolor molestie molestie sit amet ut elit.
-            Nulla accumsan nisl sapien, eget tristique nunc condimentum ac. Nam interdum tortor.Lorem ipsum dolor sit amet,
-            consectetur adipiscing.</p>
+
+  <div class="container padding">
+    <div class="container-fluid mb-4">
+      <div class="container">
+        <div class="row" style="padding: 60px">
+          <div class="col-12 col-md-12">
+            <img src="images/user-circle.svg" style="height: 50px; width: 50px">
+            <h2>Sponsor 1</h2>
+            <p>Lorem ipsum dolor sit amet, id eum etiam affert mucius, maiorum liberavisse ea mea. Posse velit debet ex vis,
+              sed eu laudem aliquando incorrupte. Cum sapientem sadipscing in, alii ferri insolens et sit, nostrum singulis
+              vel et. Adhuc corrumpit mel ut. Viris scripserit an sit. Cu has dicat voluptua, et sit altera animal aperiri.
+              Id eripuit vivendo deterruisset est, eum cu delectus intellegat. Mel quot accusam partiendo no. No choro corrumpit
+              liberavisse vis, mei te dicit dicunt. His cu partem equidem molestie, ea usu oporteat euripidis definitiones.
+              Id vis habeo consectetuer, ei erant noster perfecto mea, quem elit necessitatibus ad cum.</p>
+            <img src="images/user-circle.svg" style="height: 50px; width: 50px">
+            <h2>Sponsor 2</h2>
+            <p>Lorem ipsum dolor sit amet, id eum etiam affert mucius, maiorum liberavisse ea mea. Posse velit debet ex vis,
+              sed eu laudem aliquando incorrupte. Cum sapientem sadipscing in, alii ferri insolens et sit, nostrum singulis
+              vel et. Adhuc corrumpit mel ut. Viris scripserit an sit. Cu has dicat voluptua, et sit altera animal aperiri.
+              Id eripuit vivendo deterruisset est, eum cu delectus intellegat. Mel quot accusam partiendo no. No choro corrumpit
+              liberavisse vis, mei te dicit dicunt. His cu partem equidem molestie, ea usu oporteat euripidis definitiones.
+              Id vis habeo consectetuer, ei erant noster perfecto mea, quem elit necessitatibus ad cum.</p>
+            <img src="images/user-circle.svg" style="height: 50px; width: 50px">
+            <h2>Sponsor 3</h2>
+            <p>Lorem ipsum dolor sit amet, id eum etiam affert mucius, maiorum liberavisse ea mea. Posse velit debet ex vis,
+              sed eu laudem aliquando incorrupte. Cum sapientem sadipscing in, alii ferri insolens et sit, nostrum singulis
+              vel et. Adhuc corrumpit mel ut. Viris scripserit an sit. Cu has dicat voluptua, et sit altera animal aperiri.
+              Id eripuit vivendo deterruisset est, eum cu delectus intellegat. Mel quot accusam partiendo no. No choro corrumpit
+              liberavisse vis, mei te dicit dicunt. His cu partem equidem molestie, ea usu oporteat euripidis definitiones.
+              Id vis habeo consectetuer, ei erant noster perfecto mea, quem elit necessitatibus ad cum.</p>
+            <img src="images/user-circle.svg" style="height: 50px; width: 50px">
+            <h2>Sponsor 4</h2>
+            <p>Lorem ipsum dolor sit amet, id eum etiam affert mucius, maiorum liberavisse ea mea. Posse velit debet ex vis,
+              sed eu laudem aliquando incorrupte. Cum sapientem sadipscing in, alii ferri insolens et sit, nostrum singulis
+              vel et. Adhuc corrumpit mel ut. Viris scripserit an sit. Cu has dicat voluptua, et sit altera animal aperiri.
+              Id eripuit vivendo deterruisset est, eum cu delectus intellegat. Mel quot accusam partiendo no. No choro corrumpit
+              liberavisse vis, mei te dicit dicunt. His cu partem equidem molestie, ea usu oporteat euripidis definitiones.
+              Id vis habeo consectetuer, ei erant noster perfecto mea, quem elit necessitatibus ad cum.</p>
+          </div>
         </div>
-        <div class="col-md-6">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et tincidunt erat. Nunc ac dolor imperdiet lectus
-            pulvinar posuere. Nunc vehicula eleifend egestas. Vivamus in lorem in dolor molestie molestie sit amet ut elit.
-            Nulla accumsan nisl sapien</p>
-        </div>
-      </div>
-      <div class="table-responsive">
-        <table>
-          <tr>
-            <td style="padding: 10px">
-              <div class="fh5co_con_1234">
-                <i class="fa fa-user"></i>
-              </div>
-            </td>
-            <td style="padding: 10px">
-              <h5 style="font-weight: 300">Gerard Kelly</h5>
-              <p style="font-size: 18px"> is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris mei, at usu debet libris liberavisse.
-                Hendrerit efficiantur ex usu, duo id wisi magna.</p>
-            </td>
-          </tr>
-          <tr>
-            <td style="padding: 10px">
-              <div class="fh5co_con_1234">
-                <i class="fa fa-user"></i>
-              </div>
-            </td>
-            <td style="padding: 10px">
-              <h5 style="font-weight: 300">Britanni Johnson</h5>
-              <p style="font-size: 18px"> is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris mei, at usu debet libris liberavisse.
-                Hendrerit efficiantur ex usu, duo id wisi magna.</p>
-            </td>
-          </tr>
-          <tr>
-            <td style="padding: 10px">
-              <div class="fh5co_con_1234">
-                <i class="fa fa-user"></i>
-              </div>
-            </td>
-            <td style="padding: 10px">
-              <h5 style="font-weight: 300">Person Number 3</h5>
-              <p style="font-size: 18px"> is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris mei, at usu debet libris liberavisse.
-                Hendrerit efficiantur ex usu, duo id wisi magna.</p>
-            </td>
-          </tr>
-        </table>
       </div>
     </div>
   </div>
+
 
   <div class="container-fluid fh5co_footer_right_reserved">
     <div class="container">
@@ -205,6 +238,9 @@
             <li>
               <a href="videos.html" class="footer_last_part_menu">Videos</a>
             </li>
+            <li>
+              <a href="sponsors.html" class="footer_last_part_menu">Sponsors</a>
+            </li>
           </ul>
         </div>
         <div class="col-12 col-md-2">
@@ -223,6 +259,9 @@
             </li>
             <li>
               <a href="contact.html" class="footer_last_part_menu">Contact</a>
+            </li>
+            <li>
+              <a href="terms.html" class="footer_last_part_menu">Terms and Cond</a>
             </li>
           </ul>
         </div>
