--- a/events.html
+++ b/events.html
@@ -285,10 +285,7 @@
           <div class="container paddding">
 
             <div class="animate-box" data-animate-effect="fadeInLeft">
-              <div>
-                <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">Sponsors</div>
-              </div>
-              <img src="images/sponsor1.png" class="img-responsive" style="width: 300px" />
+              <img src="images/sponsor-tall.png" class="img-responsive" style="width: 300px" />
             </div>
 
             <!-- <hr class="short" style="margin-left: 0; margin-top: 60px">
@@ -424,6 +421,9 @@
             </li>
             <li>
               <a href="videos.html" class="footer_last_part_menu">Videos</a>
+            </li>
+            <li>
+              <a href="sponsors.html" class="footer_last_part_menu">Sponsors</a>
             </li>
           </ul>
         </div>
