--- a/single.html
+++ b/single.html
@@ -257,10 +257,7 @@
       <div class="col-md-3 col-sm-12" style="margin-top: 35px;">
 
         <div class="animate-box" data-animate-effect="fadeInLeft">
-          <div>
-            <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">Sponsors</div>
-          </div>
-          <img src="images/sponsor1.png" class="img-responsive" style="width: 300px" />
+          <img src="images/sponsor-tall.png" class="img-responsive" style="width: 300px" />
         </div>
 
 
@@ -274,10 +271,17 @@
         <hr class="short" style="margin-left: 0; margin-top: 60px">
 
         <div>
+          <div class="fh5co_heading py-2 mb-4">Facebook</div>
+          <img src="images/fb.jpg">
+        </div>
+
+        <hr class="short" style="margin-left: 0; margin-top: 60px">
+
+        <div>
           <div class="fh5co_heading py-2 mb-4">Related News</div>
         </div>
 
-        <div class="pull-right" style="">
+        <div class="pull-right">
           <ul class="list-unstyled">
             <li>
               <article>
@@ -398,6 +402,9 @@
             </li>
             <li>
               <a href="videos.html" class="footer_last_part_menu">Videos</a>
+            </li>
+            <li>
+              <a href="sponsors.html" class="footer_last_part_menu">Sponsors</a>
             </li>
           </ul>
         </div>
