--- a/videos.html
+++ b/videos.html
@@ -102,7 +102,7 @@
                   </div>
                 </div>
                 <div class="col-md-7 animate-box">
-                  <a href="single-news.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis nostrud quis xercitation ullamco. </a>
+                  <a href="single-video.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis nostrud quis xercitation ullamco. </a>
                   <a href="#" class="fh5co_mini_time py-3">
                     Thomson Smith - April 18,2016 </a>
                   <div class="fh5co_consectetur"> Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -290,10 +290,7 @@
           <div class="container paddding">
 
             <div class="animate-box" data-animate-effect="fadeInLeft">
-              <div>
-                <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">Sponsors</div>
-              </div>
-              <img src="images/sponsor1.png" class="img-responsive" style="width: 300px" />
+              <img src="images/sponsor-tall.png" class="img-responsive" style="width: 300px" />
             </div>
 
             <!-- <hr class="short" style="margin-left: 0; margin-top: 60px">
@@ -429,6 +426,9 @@
             </li>
             <li>
               <a href="videos.html" class="footer_last_part_menu">Videos</a>
+            </li>
+            <li>
+              <a href="sponsors.html" class="footer_last_part_menu">Sponsors</a>
             </li>
           </ul>
         </div>
