--- a/single-news.html
+++ b/single-news.html
@@ -154,21 +154,21 @@
                   <div style="background-color: #ccc; height: 150px; width: 250px"></div>
                   <div>
                     <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                    <p style="font-weight: 300; font-size: 16px; margin-top: -20px">2.2M views</p>
+                    <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Now</p>
                   </div>
                 </td>
                 <td>
                   <div style="background-color: #ccc; height: 150px; width: 250px"></div>
                   <div>
                     <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                    <p style="font-weight: 300; font-size: 16px; margin-top: -20px">2.2M views</p>
+                    <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Oct</p>
                   </div>
                 </td>
                 <td>
                   <div style="background-color: #ccc; height: 150px; width: 250px"></div>
                   <div>
                     <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                    <p style="font-weight: 300; font-size: 16px; margin-top: -20px">2.2M views</p>
+                    <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Jan</p>
                   </div>
                 </td>
               </tr>
@@ -177,21 +177,21 @@
                   <div style="background-color: #cecece; height: 150px; width: 250px"></div>
                   <div>
                     <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                    <p style="font-weight: 300; font-size: 16px; margin-top: -20px">2.2M views</p>
+                    <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Feb</p>
                   </div>
                 </td>
                 <td>
                   <div style="background-color: #ccc; height: 150px; width: 250px"></div>
                   <div>
                     <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                    <p style="font-weight: 300; font-size: 16px; margin-top: -20px">2.2M views</p>
+                    <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Feb</p>
                   </div>
                 </td>
                 <td>
                   <div style="background-color: #ccc; height: 150px; width: 250px"></div>
                   <div>
                     <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                    <p style="font-weight: 300; font-size: 16px; margin-top: -20px">2.2M views</p>
+                    <p style="font-weight: 300; font-size: 16px; margin-top: -20px">March</p>
                   </div>
                 </td>
               </tr>
