--- a/events.html
+++ b/events.html
@@ -99,7 +99,7 @@
                 <div class="col-md-5">
                   <div class="fh5co_hover_news_img">
                     <div class="fh5co_news_img">
-                      <img src="images/news.jpg" alt="" />
+                      <img src="images/39-324x235.jpg" alt="" />
                     </div>
                     <div></div>
                   </div>
@@ -140,7 +140,7 @@
                 <div class="col-md-5">
                   <div class="fh5co_hover_news_img">
                     <div class="fh5co_news_img">
-                      <img src="images/news.jpg" alt="" />
+                      <img src="images/39-324x235.jpg" alt="" />
                     </div>
                     <div></div>
                   </div>
@@ -182,7 +182,7 @@
                 <div class="col-md-5">
                   <div class="fh5co_hover_news_img">
                     <div class="fh5co_news_img">
-                      <img src="images/news.jpg" alt="" />
+                      <img src="images/39-324x235.jpg" alt="" />
                     </div>
                     <div></div>
                   </div>
@@ -223,7 +223,7 @@
                 <div class="col-md-5">
                   <div class="fh5co_hover_news_img">
                     <div class="fh5co_news_img">
-                      <img src="images/news.jpg" alt="" />
+                      <img src="images/39-324x235.jpg" alt="" />
                     </div>
                     <div></div>
                   </div>
