--- a/single-news.html
+++ b/single-news.html
@@ -151,21 +151,21 @@
             <tbody>
               <tr>
                 <td>
-                  <div style="background-color: #ccc; height: 150px; width: 250px"></div>
+                  <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px"></div>
                   <div>
                     <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
                     <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Now</p>
                   </div>
                 </td>
                 <td>
-                  <div style="background-color: #ccc; height: 150px; width: 250px"></div>
+                  <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px"></div>
                   <div>
                     <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
                     <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Oct</p>
                   </div>
                 </td>
                 <td>
-                  <div style="background-color: #ccc; height: 150px; width: 250px"></div>
+                  <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px"></div>
                   <div>
                     <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
                     <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Jan</p>
@@ -181,17 +181,17 @@
                   </div>
                 </td>
                 <td>
-                  <div style="background-color: #ccc; height: 150px; width: 250px"></div>
+                  <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px"></div>
                   <div>
                     <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
                     <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Feb</p>
                   </div>
                 </td>
                 <td>
-                  <div style="background-color: #ccc; height: 150px; width: 250px"></div>
+                    <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px"></div>
                   <div>
                     <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                    <p style="font-weight: 300; font-size: 16px; margin-top: -20px">March</p>
+                    <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Mar</p>
                   </div>
                 </td>
               </tr>
