--- a/videos.html
+++ b/videos.html
@@ -96,7 +96,7 @@
                 <div class="col-md-5">
                   <div class="fh5co_hover_news_img">
                     <div class="fh5co_news_img">
-                      <img src="images/news.jpg" alt="" />
+                      <img src="images/39-324x235.jpg" alt="" />
                     </div>
                     <div></div>
                   </div>
@@ -139,7 +139,7 @@
                 <div class="col-md-5">
                   <div class="fh5co_hover_news_img">
                     <div class="fh5co_news_img">
-                      <img src="images/news.jpg" alt="" />
+                      <img src="images/39-324x235.jpg" alt="" />
                     </div>
                     <div></div>
                   </div>
@@ -183,7 +183,7 @@
                 <div class="col-md-5">
                   <div class="fh5co_hover_news_img">
                     <div class="fh5co_news_img">
-                      <img src="images/news.jpg" alt="" />
+                      <img src="images/39-324x235.jpg" alt="" />
                     </div>
                     <div></div>
                   </div>
@@ -226,7 +226,7 @@
                 <div class="col-md-5">
                   <div class="fh5co_hover_news_img">
                     <div class="fh5co_news_img">
-                      <img src="images/news.jpg" alt="" />
+                      <img src="images/39-324x235.jpg" alt="" />
                     </div>
                     <div></div>
                   </div>
