--- a/news.html
+++ b/news.html
@@ -95,7 +95,7 @@
                 <div class="col-md-5">
                   <div class="fh5co_hover_news_img">
                     <div class="fh5co_news_img">
-                      <img src="images/news.jpg" alt="" />
+                      <img src="images/39-324x235.jpg" alt="">
                     </div>
                     <div></div>
                   </div>
@@ -138,7 +138,7 @@
                 <div class="col-md-5">
                   <div class="fh5co_hover_news_img">
                     <div class="fh5co_news_img">
-                      <img src="images/news.jpg" alt="" />
+                      <img src="images/39-324x235.jpg" alt="">
                     </div>
                     <div></div>
                   </div>
@@ -182,7 +182,7 @@
                 <div class="col-md-5">
                   <div class="fh5co_hover_news_img">
                     <div class="fh5co_news_img">
-                      <img src="images/news.jpg" alt="" />
+                      <img src="images/39-324x235.jpg" alt="">
                     </div>
                     <div></div>
                   </div>
@@ -225,7 +225,7 @@
                 <div class="col-md-5">
                   <div class="fh5co_hover_news_img">
                     <div class="fh5co_news_img">
-                      <img src="images/news.jpg" alt="" />
+                      <img src="images/39-324x235.jpg" alt="">
                     </div>
                     <div></div>
                   </div>
@@ -289,7 +289,7 @@
           <div class="container paddding">
 
             <div class="animate-box" data-animate-effect="fadeInLeft">
-           
+
               <img src="images/sponsor-tall.png" class="img-responsive" style="width: 300px" />
             </div>
 
@@ -370,7 +370,7 @@
   <div class="container-fluid text-center animate-box">
     <img class="img-fluid" style="margin: -30px 0px 60px 0px" src="images/ad.jpg" />
   </div>
-  
+
   <div class="container-fluid fh5co_footer_right_reserved">
     <div class="container">
       <div class="row">
