--- a/contact.html
+++ b/contact.html
@@ -348,7 +348,7 @@
               <a href="contact.html" class="footer_last_part_menu">Contact</a>
             </li>
             <li>
-              <a href="terms.html" class="footer_last_part_menu">Terms and Cond</a>
+              <a href="terms.html" class="footer_last_part_menu">Legal</a>
             </li>
           </ul>
         </div>
