--- a/single-news.html
+++ b/single-news.html
@@ -129,101 +129,107 @@
   </div>
 
   <div class="container paddding">
-      <div class="row animate-box">
-        <div class="col-md-9 col-sm-12">
+    <div class="row animate-box">
+      <div class="col-md-9 col-sm-12">
         <div class="container" style="padding: 30px">
           <img src="images/feat-content.jpg" style="margin-bottom: 30px">
-               
-                <h4>PUBG Tournament Article</h4>
-                <p>is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris mei, at usu debet libris liberavisse.
-                  Hendrerit efficiantur ex usu, duo id wisi magna. is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris
-                  mei, at usu debet libris liberavisse. Hendrerit efficiantur ex usu, duo id wisi magna.</p>
-              </div>
-          <div class="container-fluid text-center animate-box">
-            <img class="img-fluid" style="margin: 30px 0px 60px 0px" src="images/ad.jpg" />
-          </div>
-  
-          <hr class="short">
-          <div>
-            <div class="fh5co_heading py-2 mb-4">Related Articles</div>
-          </div>
-          <table cellpadding="0" cellspacing="0" border="0" class="datatable table table-responsive table-bordered">
-            <tbody>
-              <tr>
-                <td>
-                  <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px"></div>
-                  <div>
-                    <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                    <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Now</p>
-                  </div>
-                </td>
-                <td>
-                  <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px"></div>
-                  <div>
-                    <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                    <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Oct</p>
-                  </div>
-                </td>
-                <td>
-                  <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px"></div>
-                  <div>
-                    <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                    <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Jan</p>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <div style="background-color: #cecece; height: 150px; width: 250px"></div>
-                  <div>
-                    <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                    <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Feb</p>
-                  </div>
-                </td>
-                <td>
-                  <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px"></div>
-                  <div>
-                    <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                    <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Feb</p>
-                  </div>
-                </td>
-                <td>
-                    <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px"></div>
-                  <div>
-                    <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                    <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Mar</p>
-                  </div>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+
+          <h4>PUBG Tournament Article</h4>
+          <p>is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris mei, at usu debet libris liberavisse. Hendrerit
+            efficiantur ex usu, duo id wisi magna. is Lorem ipsum dolor sit amet, at commune intellegebat interpretaris mei,
+            at usu debet libris liberavisse. Hendrerit efficiantur ex usu, duo id wisi magna.</p>
         </div>
-  
-        <div class="col-md-3 col-sm-12" style="margin-top: 30px;">
-  
-          <div class="animate-box" data-animate-effect="fadeInLeft">
-            <img src="images/sponsor-tall.png" class="img-responsive" style="width: 300px" />
-          </div>
-  
-  
-          <div class="animate-box" data-animate-effect="fadeInLeft">
-            <div>
-              <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">Latest</div>
-            </div>
-            <img src="images/twitter.png" class="img-responsive" style="width: 300px" />
-          </div>
-  
-          <hr class="short" style="margin-left: 0; margin-top: 60px">
-  
-          <div>
-            <div class="fh5co_heading py-2 mb-4">Facebook</div>
-            <img src="images/fb.jpg" style="margin-bottom: 60px">
-          </div>
-  
+        <div class="container-fluid text-center animate-box">
+          <img class="img-fluid" style="margin: 30px 0px 60px 0px" src="images/ad.jpg" />
         </div>
-  
+
+        <hr class="short">
+        <div>
+          <div class="fh5co_heading py-2 mb-4">Related Articles</div>
+        </div>
+        <table cellpadding="0" cellspacing="0" border="0" class="datatable table table-responsive table-bordered">
+          <tbody>
+            <tr>
+              <td>
+                <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
       </div>
+      <div>
+        <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
+        <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Now</p>
+      </div>
+      </td>
+      <td>
+        <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
     </div>
+    <div>
+      <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
+      <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Oct</p>
+    </div>
+    </td>
+    <td>
+      <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
+  </div>
+  <div>
+    <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
+    <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Jan</p>
+  </div>
+  </td>
+  </tr>
+  <tr>
+    <td>
+      <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
+      </div>
+      <div>
+        <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
+        <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Feb</p>
+      </div>
+    </td>
+    <td>
+      <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
+      </div>
+      <div>
+        <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
+        <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Feb</p>
+      </div>
+    </td>
+    <td>
+      <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
+      </div>
+      <div>
+        <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
+        <p style="font-weight: 300; font-size: 16px; margin-top: -20px">Mar</p>
+      </div>
+    </td>
+  </tr>
+  </tbody>
+  </table>
+  </div>
+
+  <div class="col-md-3 col-sm-12" style="margin-top: 30px;">
+
+    <div class="animate-box" data-animate-effect="fadeInLeft">
+      <img src="images/sponsor-tall.png" class="img-responsive" style="width: 300px" />
+    </div>
+
+
+    <div class="animate-box" data-animate-effect="fadeInLeft">
+      <div>
+        <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">Latest</div>
+      </div>
+      <img src="images/twitter.png" class="img-responsive" style="width: 300px" />
+    </div>
+
+    <hr class="short" style="margin-left: 0; margin-top: 60px">
+
+    <div>
+      <div class="fh5co_heading py-2 mb-4">Facebook</div>
+      <img src="images/fb.jpg" style="margin-bottom: 60px">
+    </div>
+
+  </div>
+
+  </div>
+  </div>
 
   <div class="container-fluid fh5co_footer_right_reserved">
     <div class="container">
