--- a/single-video.html
+++ b/single-video.html
@@ -151,48 +151,36 @@
           <tbody>
             <tr>
               <td>
-                  <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px"></div>
-                <div>
-                  <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                  <p style="font-weight: 300; font-size: 16px; margin-top: -20px">2.2M views</p>
-                </div>
+                <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
+                <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
+                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">2.2M views</p>
               </td>
               <td>
-                  <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px"></div>
-                <div>
-                  <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                  <p style="font-weight: 300; font-size: 16px; margin-top: -20px">2.2M views</p>
-                </div>
+                <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
+                <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
+                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">2.2M views</p>
               </td>
               <td>
-                  <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px"></div>
-                <div>
-                  <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                  <p style="font-weight: 300; font-size: 16px; margin-top: -20px">2.2M views</p>
-                </div>
+                <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
+                <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
+                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">2.2M views</p>
               </td>
             </tr>
             <tr>
               <td>
-                  <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px"></div>
-                <div>
-                  <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                  <p style="font-weight: 300; font-size: 16px; margin-top: -20px">2.2M views</p>
-                </div>
+                <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
+                <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
+                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">2.2M views</p>
               </td>
               <td>
-                  <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px"></div>
-                <div>
-                  <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                  <p style="font-weight: 300; font-size: 16px; margin-top: -20px">2.2M views</p>
-                </div>
+                <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
+                <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
+                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">2.2M views</p>
               </td>
               <td>
-                  <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px"></div>
-                <div>
-                  <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
-                  <p style="font-weight: 300; font-size: 16px; margin-top: -20px">2.2M views</p>
-                </div>
+                <img src="images/39-324x235.jpg" alt="" style="height: 150px; width: 250px">
+                <p style="font-weight: 500; font-size: 18px; margin-top: 8px">Lorum Ipsum Dolet.</p>
+                <p style="font-weight: 300; font-size: 16px; margin-top: -20px">2.2M views</p>
               </td>
             </tr>
           </tbody>
