--- a/single.html
+++ b/single.html
@@ -89,7 +89,7 @@
     </div>
   </div>
 
-  <div class="container paddding">
+  <div class="container padding">
     <div class="row animate-box">
       <div class="col-md-9 col-sm-12">
         <!-- Tab panes -->
