--- a/events.html
+++ b/events.html
@@ -85,7 +85,7 @@
     <img class="img-fluid" style="padding: 30px 0px 0px 0px" src="images/ad.jpg" />
   </div> -->
 
-  <div class="container padding">
+  <div class="container">
     <div class="row">
 
       <div class="col-12 col-md-9 py-4 Reserved">
