--- a/single-news.html
+++ b/single-news.html
@@ -128,7 +128,7 @@
     </div>
   </div>
 
-  <div class="container paddding">
+  <div class="container padding">
     <div class="row animate-box">
       <div class="col-md-9 col-sm-12">
         <div class="container" style="padding: 30px">
