--- a/videos.html
+++ b/videos.html
@@ -82,7 +82,7 @@
   </div>
 
 
-  <div class="container padding">
+  <div class="container">
     <div class="row">
 
       <div class="col-12 col-md-9 py-4 Reserved">
